# sisap26-deglib

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.md  benchmark.md  benchmark_small.py  benchmark_task1_large.py  benchmark_task1_small.py  benchmark_task2.md  benchmark_task2.py  benchmarks.md  download_dataset.py  explore_compare.py  hyperparameters.md  linear_search.py  main.py  pyproject.toml  task1.py  task1_deglib_all.py  task1_deglib_explore.py  task1_deglib_neighbors.py  task1_evp.py  task1_explore.py
cpp/sisap/: CMakeLists.txt  sisap_common.h  task1.cpp  task2.cpp
cpp/sisap/flas/: fast_linear_assignment_sorter.hpp
cpp/sisap/task1/: mode1.h  mode2.h  mode3.h  mode4.h  mode5.h  mode6.h  mode7.h  mode8.h
cpp/sisap/task2/: mode1.h  mode10.h  mode2.h  mode3.h  mode4.h  mode5.h  mode6.h  mode7.h  mode8.h  mode9.h
evp/: evp.py  (+1 more)
python/: Dockerfile  README.md  SISAP_2026_Task1.md  TODO.md  benchmark_task1_large.py  benchmark_task1_small.py  benchmark_task1_spot.py  benchmark_task2.py  benchmark_task2_spot.py  evaluate_benchmark_task1_small.py  evaluate_benchmark_task2.py  evaluate_combined_task1.py  evaluate_submission_task1_large.py  evaluate_submission_task2.py  evaluate_task1_small.py  evaluate_task2.py  main.py  pyproject.toml  submission_task1_large.py  submission_task1_small.py  submission_task2.py
python/docker_runner/: __init__.py  log_parser.py  result.py  runner.py
python/optuna/: avx2_retime.py  candidates_15.csv  candidates_15_avx2.csv  k_ext_sweep.py  kgraph_kext40_sweep.py  large_overnight.py  large_sweep.py  make_large_report.py  optuna_search.py
python/optuna/results_large/: k_ext_sweep.csv  kgraph_kext40_sweep.csv  (+1 more)
(+66 files in other folders)
