[project]
name = "sisap26-deglib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deglib>=0.1.6",
    "docker>=7.0",
    "h5py>=3.16.0",
    "huggingface-hub>=1.13.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "numpy",
    "psutil",
    "py-cpuinfo",
    "vc-flas>=0.1.7",
]
